Fix: Adjust wrap styles

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -2,8 +2,12 @@
 // layout
 // ========================================
 
+#root {
+	min-height: 100vh;
+}
+
 .wrap {
-	padding: 0 20px;
-	max-width: 1100px;
+	padding: 6vw 20px;
+	max-width: 600px;
 	margin: 0 auto;
 }
